--- a/index.html
+++ b/index.html
@@ -8,61 +8,64 @@
   <body>
 <!--header section-->
     <header>
-      <img class="logo" src="/Users/christiangarcia/Desktop/Projects/teacozy/resources/images/img-tea-cozy-logo.png" alt="">
+      <img src="/Users/christiangarcia/Desktop/Projects/teacozy/resources/images/img-tea-cozy-logo.png" alt="">
       <nav>
-        <a href="#">Mission</a>
-        <a href="#">Featured Tea</a>
-        <a href="#">Locations</a>
+        <span><a href="#">Mission</a></span>
+        <span><a href="#">Featured Tea</a></span>
+        <span><a href="#">Locations</a></span>
       </nav>
     </header>
+<!--Main Section-->
+    <main>
 <!--mission section-->
-    <div class="mission">
-      <div class="mission text">
-        <h2>Our mission</h2>
-        <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
+      <div class="mission">
+        <div class="mission text">
+          <h2>Our mission</h2>
+          <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
+        </div>
       </div>
-    </div>
-<!--tea of the month section-->
-    <div class="month">
-      <h2>Tea of the Month</h2>
-      <h3>What's Steeping at The Tea Cozy?</h3>
-      <div class="berry blitz">
-        <h3>Fall Berry Blitz Tea</h3>
+  <!--tea of the month section-->
+      <div class="month">
+        <h2>Tea of the Month</h2>
+        <h3>What's Steeping at The Tea Cozy?</h3>
+        <div class="berry blitz">
+          <h3>Fall Berry Blitz Tea</h3>
+        </div>
+        <div class="rum">
+          <h3>Spiced Rum Tea</h3>
+        </div>
+        <div class="donut">
+          <h3>Seasonal Donuts</h3>
+        </div>
+        <div class="myrtle">
+          <h3>Myrtle Ave Tea</h3>
+        </div>
+        <div class="bedford">
+          <h3>Bedford Bizarre Tea</h3>
+        </div>
       </div>
-      <div class="rum">
-        <h3>Spiced Rum Tea</h3>
+  <!--Locations section-->
+      <div class="locations">
+        <div class="box">
+          <h3>Downtown</h3>
+          <h4>384 West 4th St</h4>
+          <h4>Suite 108</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="box">
+          <h3>East Bayside</h3>
+          <h4>3433 Phisherman's Avenue</h4>
+          <h4>(Northwest Corner)</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div class="box">
+          <h3>Oakdale</h3>
+          <h4>515 Crescent Avenue</h4>
+          <h4>Second Floor</h4>
+          <h4>Portland, Maine</h4>
+        </div>
       </div>
-      <div class="donut">
-        <h3>Seasonal Donuts</h3>
-      </div>
-      <div class="myrtle">
-        <h3>Myrtle Ave Tea</h3>
-      </div>
-      <div class="bedford">
-        <h3>Bedford Bizarre Tea</h3>
-      </div>
-    </div>
-<!--Locations section-->
-    <div class="locations">
-      <div class="box">
-        <h3>Downtown</h3>
-        <h4>384 West 4th St</h4>
-        <h4>Suite 108</h4>
-        <h4>Portland, Maine</h4>
-      </div>
-      <div class="box">
-        <h3>East Bayside</h3>
-        <h4>3433 Phisherman's Avenue</h4>
-        <h4>(Northwest Corner)</h4>
-        <h4>Portland, Maine</h4>
-      </div>
-      <div class="box">
-        <h3>Oakdale</h3>
-        <h4>515 Crescent Avenue</h4>
-        <h4>Second Floor</h4>
-        <h4>Portland, Maine</h4>
-      </div>
-    </div>
+    </main>
 <!--Contact Section-->
     <div class="contact">
       <h2>The Tea Cozy</h2>
